--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 }
 
 html, body {
-	font-size: 16px;
 	font-family: sans-serif;
 	
 	background-color: #000;
@@ -63,6 +62,8 @@ header .prikey {
 	
 	text-align: center;
     
+    overflow-x: auto;
+
 	background-color: rgba(0,0,0,0.8);
 	color:#ccc;
 }
